- fixed wrong position of tipsy tooltip in firewall module

--- a/webclient/public/stylesheets/tipsy.css
+++ b/webclient/public/stylesheets/tipsy.css
@@ -35,6 +35,6 @@ THE SOFTWARE.*/
 
 
 /* WORKAROUND: Customized for control panel */
-.tipsy { margin-top:16px; }
-.tipsy-n .tipsy-arrow { top: 0; left: 50%; margin-top:0px; margin-left: -4px; }
+/*.tipsy { margin-top:16px; }
+.tipsy-n .tipsy-arrow { top: 0; left: 50%; margin-top:0px; margin-left: -4px; } */
 /*.tipsy-n .tipsy-arrow { display:none; }*/
